Updated 'layouts/enprops/list.html' via CloudCannon

--- a/layouts/enprops/list.html
+++ b/layouts/enprops/list.html
@@ -1,7 +1,7 @@
     <ul>
     {{ range .Pages }}
         <li>
-            {{.Ptype}} {{.Location}} {{.Town}}<br/>
+            {{.ptype}} {{.location}} {{.town}}<br/>
         </li>
     {{ end }}
     </ul>
